--- a/Applications/App Market.app/Localizations/English.lang
+++ b/Applications/App Market.app/Localizations/English.lang
@@ -13,6 +13,7 @@
 	typeUserName = "Type user name",
 	yourText = "You:",
 	hereBeYourDialogs = "Here will be your conversations",
+	hideApplicationIcons = "Hide application icons",
 
 	categoryOverview = "Overview",
 	categoryApplications = "Applications",
