--- a/Localizations/Bulgarian.lang
+++ b/Localizations/Bulgarian.lang
@@ -1,128 +1,130 @@
 -- Bulgarian Language Pack
--- Contributed by Pitaya on 18/06/19
+-- Contributed by m4trixglitch (AKA Pitaya4) on 18/06/19
 -- Български език за MineOS
 
+-- Revision: 17 May 2022
+
 {
-	downloading = "Изтегля се…",
-	CPUArchitecture = "Aрхитектура на процесора",
-	RAMControl = "Контрол на RAM",
-	packageUnloading = "Автоматично ",
+	downloading = "В процес на изтегляне...",
+	CPUArchitecture = "Процесорна архитектура",
+	RAMControl = "Контрол на RAM паметта",
+	packageUnloading = "Автоматично разтоварване",
 	networkFTPNewConnection = "FTP връзка",
 	networkFTPConnections = "FTP връзки",
-	networkFTPAddress = "Адрес на FТР сървъра",
+	networkFTPAddress = "Адрес на сървъра",
 	networkFTPPort = "Порт",
-	networkFTPUser = "Потребителско име",
+	networkFTPUser = "Потребител",
 	networkFTPPassword = "Парола",
-	updatingFileList = "Презареждане…",
+	updatingFileList = "Списъкът на файлове се обновява...",
 	network = "Мрежа",
-	networkTimeout = "Дистанционният компютър не отговаря",
-	networkAccessDenied = "Достъпът до файловете на дистанционния компютър е отказан. Свържете се с притежателя му за да получите правата",
-	networkAllowReadAndWrite = "Достъп до файловете",
-	networkModemNotAvailable = "Закачете модем към компютъра за да използвате мрежовите услуги",
-	networkState = "Еключи мрежов режим",
-	networkComputers = "Настройки за мрежовите компютри",
+	networkTimeout = "Отдалеченият компютър не отговаря",
+	networkAccessDenied = "Достъпът до файловата система на отдалечения компютър бе отказан. Свържете се със собственика му, за да получите нужните права",
+	networkAllowReadAndWrite = "Достъп до файловата система",
+	networkModemNotAvailable = "Моля поставете модем, за да ползвате мрежовите функции",
+	networkState = "Включване на мрежови режим",
+	networkComputers = "Настройки на мрежови компютри",
 	networkName = "Име на този компютър",
-	networkSearchRadius = "Сканиране на региона…",
-	openWith = "Отвори със",
+	networkSearchRadius = "Searching radius",
+	networkSearchRadius = "Радиус на търсене",
+	openWith = "Отваряне със",
 	select = "Изберете програма…",
-	keepInDock = "Закачи за Лента на програмите",
-	closeAllWindows = "Затвори всички прозорци",
-	closeWindow = "Затвори",
+	keepInDock = "Дръжте на док",
+	closeAllWindows = "Затваряне на всички прозорци",
+	closeWindow = "Затваряне",
 	newWindow = "Нов прозорец",
-	launch = "Стартирай",
-	launchWithArguments = "Стартирай с аргументи",
+	launch = "Пускане",
+	launchWithArguments = "Пускане с аргументи",
 	dontShowAnymore = "Не показвай отново",
 	newName = "Ново име",
 	folderName = "Име на папка",
 	fileName = "Име на файл",
 	applicationName = "Име на програма",
-	file = "Файл",
+	file = "Файла",
 	notExists = "не съществува",
 	alreadyExists = "вече съществува",
 	inDirectory = "в папка",
-	needReplace = "Замени?",
+	needReplace = "Да бъде ли заместен?",
 	yes = "Да",
 	no = "Не",
-	cancel = "Откажи",
-	open = "Отвори",
-	applyToAll = "Приеми за всички",
-	toDirectory = "за папка",
+	cancel = "Отмяна",
+	open = "Отваряне",
+	applyToAll = "Прилагане към всички",
+	toDirectory = "към папка",
 	copying = "Копиране",
-	faylaBlyad = "файл",
-
-	areYouSure = "Сигурни ли сте?",
-	emptyTrash = "Изчисти кошчето",
+	faylaBlyad = "файл", -- nice key name :D
+	areYouSure = "Сигурен ли сте?",
+	emptyTrash = "Изчистване на кошчето",
 	type = "Вид",
-	size = "Големина",
+	size = "Размер",
 	date = "Дата",
 	name = "Име",
-	path = "Локация",
+	path = "Пътека",
 	folder = "Папка",
-	unknown = "Непознат",
-	calculatingSize = "изчислява се…",
+	unknown = "Неизвестно",
+	calculatingSize = "изчисляване…",
 
-	properties = "Настройки",
+	properties = "Свойства",
 	newFolderFromChosen = "Нова папка от избраните",
-	create = "Нов(а/о)",
-	newFolder = "Пака",
+	create = "Създаване на",
+	newFolder = "Папка",
 	newFile = "Файл",
 	newFileFromURL = "Файл от URL",
 	newImage = "Изображение",
 	newApplication = "Програма за MineOS",
-	paste = "Постави",
-	copy = "Копирай",
-	cut = "Изрежи",
-	edit = "Редактирай",
-	editInPhotoshop = "Редактирай във Photoshop",
-	rename = "Преименувай",
-	editShortcut = "Редактирай пряка връзка",
-	createShortcut = "Създай пряка връзка",
-	addToDock = "Добави в Лента на Програмите",
-	removeFromDock = "Откачи от Лента на Програмите",
+	paste = "Поставяне",
+	copy = "Копиране",
+	cut = "Изрязване",
+	edit = "Редактиране",
+	editInPhotoshop = "Редактиране във Photoshop",
+	rename = "Преименуване",
+	editShortcut = "Редактиране на пряк път",
+	createShortcut = "Създаване на пряк път",
+	addToDock = "Добавяне в дока",
+	removeFromDock = "Премахване от дока",
 	moveRight = "Премести вдясно",
 	moveLeft = "Премести вляво",
-	archive = "Добави в архива",
-	delete = "Изтрий",
-	addToFavourites = "Добави в любими",
-	removeFromFavourites = "Премахни от любими",
-	setAsWallpaper = "Задай като тапет",
-	showPackageContent = "Покажи съдържание",
-	showContainingFolder = "Покажи съдържащата папка",
-	flashEEPROM = "Запиши в EEPROM-а",
-	flashingEEPROM = "Записване в прогрес. Не изключвайте компютъра…",
-	print3D = "Принтирай модела",
+	archive = "Добавяне в архив",
+	delete = "Изтриване",
+	addToFavourites = "Добавяне в любими",
+	removeFromFavourites = "Премахване от любими",
+	setAsWallpaper = "Задаване за тапет",
+	showPackageContent = "Показване на съдържанието на папката",
+	showContainingFolder = "Показване на съдържащата папка",
+	flashEEPROM = "Запиши в EEPROM",
+	flashingEEPROM = "В момента се записва. Не изключвайте компютъра...",
+	print3D = "Принтиране на модел",
 
-	sortBy = "Подреди по",
-	sortByType = "вид",
-	sortByName = "име",
-	sortByDate = "дата",
+	sortBy = "Сортиране",
+	sortByType = "По вид",
+	sortByName = "По име",
+	sortByDate = "По дата",
 
 	aboutSystem = "Относно системата",
-	updates = "Обновления",
-	update = "Презареди",
-	shutdown = "Изключи",
-	logout = "Излез от профила",
-	reboot = "Рестартирай",
+	updates = "Актуализации",
+	update = "Обновяване",
+	shutdown = "Изключване",
+	logout = "Изход",
+	reboot = "Рестартиране",
 
-	shortcutIsCorrupted = "Пряката връзка сочи към несъшествуващ файл",
-	sortAutomatically = "Подреди в таблица",
-	onDesktop = "На десктопа",
-	inCurrentDirectory = "В настоящата папка",
+	shortcutIsCorrupted = "Прекият път води до несъществуващ файл",
+	sortAutomatically = "Подреждане в мрежа",
+	onDesktop = "На декстопа",
+	inCurrentDirectory = "В текущата папка",
 
-	errorWhileRunningProgram = "Грешка при изпълнението на програма ",
+	errorWhileRunningProgram = "Възникна грешка при изпълняване на ",
 	sendedFeedback = "Обратната връзка бе изпратена",
-	sendFeedback = "Изпратете обратна връзка",
+	sendFeedback = "Изпращане на обратна връзка",
 	yourContacts = "Вашите контакти",
 	additionalInfo = "Допълнителна информация",
-	stackTraceback = "Stack traceback",
+	stackTraceback = "Стак на повикванията",
 
 	favourite = "Любими",
-	search = "Търси",
-	mounts = "Закачени",
+	search = "Търсене",
+	mounts = "Монтирани",
 
-	uploadToPastebin = "Качи в Pastebin",
-	pasteName = "Име на Пейст",
-	uploading = "Качване в процес…",
-	uploadingSuccess = "Качено успешно: ",
-	uploadingFailure = "Качването се провали: ",
+	uploadToPastebin = "Качване в Pastebin",
+	pasteName = "Име",
+	uploading = "В процес на качване...",
+	uploadingSuccess = "Качено на ",
+	uploadingFailure = "Качването не бе успешно: ",
 }
