--- a/Localizations/Bengali.lang
+++ b/Localizations/Bengali.lang
@@ -54,6 +54,7 @@
 	folder = "ফোল্ডার",
 	unknown = "অজানা",
 	calculatingSize = "গণনা করা হচ্ছে ...",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 	properties = "বৈশিষ্ট্য",
 	newFolderFromChosen = "নির্বাচিত",
 	create = "নতুন",
