--- a/Localizations/Belarusian.lang
+++ b/Localizations/Belarusian.lang
@@ -56,6 +56,7 @@
 	folder = "Тэчка",
 	unknown = "Невядома",
 	calculatingSize = "ідзе падлік…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Уласцівасці",
 	newFolderFromChosen = "Новая тэчка з вылучанага",
