--- a/Localizations/Bulgarian.lang
+++ b/Localizations/Bulgarian.lang
@@ -62,6 +62,7 @@
 	folder = "Папка",
 	unknown = "Неизвестно",
 	calculatingSize = "изчисляване…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Свойства",
 	newFolderFromChosen = "Нова папка от избраните",
