--- a/Localizations/Dutch.lang
+++ b/Localizations/Dutch.lang
@@ -56,6 +56,7 @@
 	folder = "Map",
 	unknown = "Onbekent",
 	calculatingSize = "Berekenen…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Instellingen",
 	newFolderFromChosen = "Nieuwe map van gekozen",
