--- a/Localizations/Finnish.lang
+++ b/Localizations/Finnish.lang
@@ -56,6 +56,7 @@
 	folder = "Kansio",
 	unknown = "Tuntematon",
 	calculatingSize = "lasketaan…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Ominaisuudet",
 	newFolderFromChosen = "Uusi kansio valinnasta",
