--- a/Localizations/Italian.lang
+++ b/Localizations/Italian.lang
@@ -56,6 +56,7 @@
 	folder = "Cartella",
 	unknown = "Sconosciuto",
 	calculatingSize = "calcolo…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Proprieta",
 	newFolderFromChosen = "Nuova cartella selezionata",
