--- a/Localizations/Japanese.lang
+++ b/Localizations/Japanese.lang
@@ -56,6 +56,7 @@
 	folder = "フォルダー",
 	unknown = "不明",
 	calculatingSize = "計算中…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "プロパティ",
 	newFolderFromChosen = "選択したフォルダから新しいフォルダを作成",
