--- a/Localizations/Korean.lang
+++ b/Localizations/Korean.lang
@@ -56,6 +56,7 @@
 	folder = "폴더",
 	unknown = "알 수 없음",
 	calculatingSize = "계산중…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "속성",
 	newFolderFromChosen = "선택된 파일이 포함된 새 폴더 만들기",
