--- a/Localizations/Polish.lang
+++ b/Localizations/Polish.lang
@@ -56,6 +56,7 @@
 	folder = "Folder",
 	unknown = "Nieznany",
 	calculatingSize = "obliczanie…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Ustawienia",
 	newFolderFromChosen = "Wybierz Nowy Folder z",
