--- a/Localizations/Slovak.lang
+++ b/Localizations/Slovak.lang
@@ -56,6 +56,7 @@
 	folder = "Priečinok",
 	unknown = "Neznáme",
 	calculatingSize = "počítanie…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Vlastnosti",
 	newFolderFromChosen = "Nový priečinok z vybraného",
