--- a/Localizations/Spanish.lang
+++ b/Localizations/Spanish.lang
@@ -56,6 +56,7 @@
 	folder = "Carpeta",
 	unknown = "Desconocido",
 	calculatingSize = "calculando…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Propiedades",
 	newFolderFromChosen = "Nueva carpeta desde Directorio",
