--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -56,6 +56,7 @@
 	folder = "Папка",
 	unknown = "Невідомо",
 	calculatingSize = "йде підрахунок…",
+	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
 
 	properties = "Властивості",
 	newFolderFromChosen = "Нова папка з обраного",
