Удаление иконок нажатием делита
Нажав делит, выеденные иконки отправятся в корзину

Нажав shift+делит, выделенные иконки удалятся безвозвратно, если пользователь подтвердит удаление

--- a/Localizations/Belarusian.lang
+++ b/Localizations/Belarusian.lang
@@ -57,6 +57,7 @@
 	unknown = "Невядома",
 	calculatingSize = "ідзе падлік…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Уласцівасці",
 	newFolderFromChosen = "Новая тэчка з вылучанага",
