--- a/Localizations/Bulgarian.lang
+++ b/Localizations/Bulgarian.lang
@@ -63,6 +63,7 @@
 	unknown = "Неизвестно",
 	calculatingSize = "изчисляване…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Свойства",
 	newFolderFromChosen = "Нова папка от избраните",
