--- a/Localizations/Chinese.lang
+++ b/Localizations/Chinese.lang
@@ -57,6 +57,7 @@
 	unknown = "未知",
 	calculatingSize = "计算中...",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "属性",
 	newFolderFromChosen = "在所选文件夹里新建一个文件夹",
