--- a/Localizations/English.lang
+++ b/Localizations/English.lang
@@ -57,6 +57,7 @@
 	unknown = "Unknown",
 	calculatingSize = "calculating…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Properties",
 	newFolderFromChosen = "New folder from chosen",
