--- a/Localizations/German.lang
+++ b/Localizations/German.lang
@@ -57,6 +57,7 @@
 	unknown = "Unbekannt",
 	calculatingSize = "Berechne Größe...",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Eigenschaften",
 	newFolderFromChosen = "Neuen Ordner wählen.",
