--- a/Localizations/Lolcat.lang
+++ b/Localizations/Lolcat.lang
@@ -56,6 +56,7 @@
 	unknown = "Unknown",
 	calculatingSize = "calculating…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 	properties = "propertiez",
 	newFolderFromChosen = "nu foldr frum chosen",
 	create = "nu",
