--- a/Localizations/Arabic.lang
+++ b/Localizations/Arabic.lang
@@ -56,6 +56,7 @@
 	unknown = "غير معروف",
 	calculatingSize = "الحساب ... ",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 	properties = "الخصائص",
 	newFolderFromChosen = "مجلد جديد من اختيار",
 	create = "جديد",
