--- a/Localizations/Dutch.lang
+++ b/Localizations/Dutch.lang
@@ -57,6 +57,7 @@
 	unknown = "Onbekent",
 	calculatingSize = "Berekenen…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Instellingen",
 	newFolderFromChosen = "Nieuwe map van gekozen",
