--- a/Localizations/Japanese.lang
+++ b/Localizations/Japanese.lang
@@ -57,6 +57,7 @@
 	unknown = "不明",
 	calculatingSize = "計算中…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "プロパティ",
 	newFolderFromChosen = "選択したフォルダから新しいフォルダを作成",
