--- a/Localizations/Polish.lang
+++ b/Localizations/Polish.lang
@@ -57,6 +57,7 @@
 	unknown = "Nieznany",
 	calculatingSize = "obliczanie…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Ustawienia",
 	newFolderFromChosen = "Wybierz Nowy Folder z",
