--- a/Localizations/Spanish.lang
+++ b/Localizations/Spanish.lang
@@ -57,6 +57,7 @@
 	unknown = "Desconocido",
 	calculatingSize = "calculando…",
 	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
+	fileDeletingFailure = "Failed to delete file",
 
 	properties = "Propiedades",
 	newFolderFromChosen = "Nueva carpeta desde Directorio",
